Login page and Register page is ok.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=dbr19990729
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.config=classpath:log4j2.xml
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
